# mcux-sdk

boards/boards/mcxn9xxbrk/eiq_examples/tflm_kws/cm33_core0/armgcc/: CMakeLists.txt  MCXN947_cm33_core0_flash.ld
boards/boards/mcxn9xxbrk/eiq_examples/tflm_label_image/cm33_core0/armgcc/: CMakeLists.txt  flags.cmake
boards/boards/mcxn9xxbrk/freemaster_examples/fmstr_pdbdm/: fmstr_example_pdbdm_v3_10.xml
boards/boards/mcxn9xxbrk/freemaster_examples/fmstr_usb_cdc/armgcc/: CMakeLists.txt  flags.cmake
boards/boards/mcxn9xxbrk/usb_examples/usb_device_composite_cdc_msc_disk_lite/bm/cm33_core0/armgcc/: CMakeLists.txt  flags.cmake
boards/boards/mcxn9xxbrk/usb_examples/usb_device_mtp_lite/bm/cm33_core0/armgcc/: CMakeLists.txt
boards/boards/mcxn9xxevk/edgefast_bluetooth_examples/: docs_rework_guide_MCXN947_cm33_core0.cmake
boards/mcxn9xxbrk/demo_apps/hello_world_qspi_xip/cm33_core0/: readme.txt
boards/mcxn9xxbrk/demo_apps/led_blinky/cm33_core0/: led_blinky.c  led_blinky.mex  led_blinky_v3_10.xml
boards/mcxn9xxbrk/driver_examples/crc/cm33_core0/: crc_v3_10.xml  readme.txt
boards/mcxn9xxbrk/driver_examples/evtg/cm33_core0/: evtg.c  evtg_v3_10.xml  pin_mux.c  readme.txt
boards/mcxn9xxbrk/driver_examples/ewm/cm33_core0/: ewm_v3_10.xml  readme.txt
boards/mcxn9xxbrk/driver_examples/freqme/cm33_core0/: pin_mux.c  readme.txt
boards/mcxn9xxbrk/driver_examples/gdet/cm33_core0/: readme.txt
boards/mcxn9xxbrk/driver_examples/intm/cm33_core0/: intm_v3_10.xml  readme.txt
boards/mcxn9xxbrk/driver_examples/irtc/cm33_core0/: irtc_v3_10.xml  readme.txt
boards/mcxn9xxbrk/driver_examples/itrc/cm33_core0/: itrc.c
boards/mcxn9xxbrk/driver_examples/mrt/cm33_core0/: readme.txt
boards/mcxn9xxbrk/driver_examples/ostimer/cm33_core0/: ostimer_example_v3_10.xml
boards/mcxn9xxbrk/driver_examples/puf_v3/cm33_core0/: puf_v3.c  readme.txt
boards/mcxn9xxbrk/driver_examples/syspm/cm33_core0/: syspm_v3_10.xml
boards/mcxn9xxbrk/driver_examples/tdet/cm33_core0/: readme.txt  tdet_v3_10.xml
boards/mcxn9xxbrk/driver_examples/utick/cm33_core0/: readme.txt  utick_v3_10.xml
boards/mcxn9xxbrk/driver_examples/vref_1/cm33_core0/: readme.txt
boards/mcxn9xxbrk/driver_examples/wwdt/cm33_core0/: pin_mux.c  readme.txt  wwdt.c
boards/mcxn9xxbrk/eiq_examples/tflm_cifar10/cm33_core0/: pin_mux.c  readme.txt
boards/mcxn9xxbrk/eiq_examples/tflm_kws/cm33_core0/: readme.txt  tflm_kws_v3_10.xml
boards/mcxn9xxbrk/eiq_examples/tflm_label_image/cm33_core0/: readme.txt
boards/mcxn9xxbrk/els_pkc_examples/els_pkc_asymmetric/cm33_core0/: els_pkc_asymmetric_v3_10.xml
boards/mcxn9xxbrk/els_pkc_examples/els_pkc_asymmetric/cm33_core0/armgcc/: CMakeLists.txt  flags.cmake
boards/mcxn9xxbrk/els_pkc_examples/els_pkc_common/cm33_core0/: els_pkc_common.c  els_pkc_common.h  els_pkc_common_v3_10.xml
boards/mcxn9xxbrk/els_pkc_examples/els_symmetric/cm33_core0/: els_symmetric.h  els_symmetric_v3_10.xml  readme.txt
boards/mcxn9xxbrk/freemaster_examples/fmstr_pdbdm/armgcc/: CMakeLists.txt
boards/mcxn9xxbrk/freemaster_examples/fmstr_usb_cdc/: fmstr_example_usb_cdc_v3_10.xml
boards/mcxn9xxbrk/freemaster_examples/fmstr_usb_cdc/armgcc/: MCXN947_cm33_core0_flash.ld
boards/mcxn9xxbrk/freemaster_examples/fmstr_usb_cdc/iar/: fmstr_example_usb_cdc.ewp
boards/mcxn9xxbrk/freemaster_examples/fmstr_usb_cdc/mdk/: fmstr_example_usb_cdc.uvprojx
boards/mcxn9xxbrk/littlefs_examples/littlefs_shell/cm33_core0/: littlefs_shell_v3_10.xml  peripherals.c
boards/mcxn9xxbrk/littlefs_examples/littlefs_shell_onchip_flash/cm33_core0/: peripherals.c  readme.txt
boards/mcxn9xxbrk/multicore_examples/erpc_matrix_multiply_rpmsg/cm33_core0/: main_core0.c
boards/mcxn9xxbrk/multicore_examples/erpc_matrix_multiply_rpmsg/cm33_core1/: erpc_matrix_multiply_rpmsg_cm33_core1_v3_10.xml  main_core1.c  readme.txt
boards/mcxn9xxbrk/multicore_examples/erpc_matrix_multiply_rpmsg_rtos/cm33_core0/: pin_mux.h  readme.txt
boards/mcxn9xxbrk/multicore_examples/erpc_matrix_multiply_rpmsg_rtos/cm33_core1/: main_core1.c
boards/mcxn9xxbrk/multicore_examples/erpc_two_way_rpc_rpmsg_rtos/cm33_core0/armgcc/: CMakeLists.txt
boards/mcxn9xxbrk/usb_examples/usb_host_msd_fatfs/freertos/cm33_core0/armgcc/: CMakeLists.txt  config.cmake
devices/MCXN947/cmsis_drivers/: driver_cmsis_lpi2c_MCXN947_cm33_core0.cmake  driver_cmsis_lpspi_MCXN947_cm33_core0.cmake  driver_cmsis_lpuart_MCXN947_cm33_core0.cmake
devices/MCXN947/drivers/: driver_edma_soc_MCXN947_cm33_core0.cmake  driver_flexio_spi_edma_MCXN947_cm33_core0.cmake  driver_flexio_uart_edma_MCXN947_cm33_core0.cmake  driver_flexspi_dma3_MCXN947_cm33_core0.cmake  driver_gdet_MCXN947_cm33_core0.cmake  driver_lpi2c_edma_MCXN947_cm33_core0.cmake  driver_lpspi_edma_MCXN947_cm33_core0.cmake  driver_lpuart_edma_MCXN947_cm33_core0.cmake  driver_ostimer_MCXN947_cm33_core0.cmake  driver_pdm_edma_MCXN947_cm33_core0.cmake  driver_syspm_MCXN947_cm33_core0.cmake  driver_tdet_MCXN947_cm33_core0.cmake  driver_trng_MCXN947_cm33_core0.cmake
docs/MCUXpresso SDK API Reference Manual_MCXN947/: a00006.html  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  a00022.html  a00022.js  a00023.html  a00023.js  a00024.html  a00024.js  a00025.html  a00025.js  a00026.html  a00026.js  a00027.html  (+234 more)
docs/MCUXpresso SDK API Reference Manual_MCXN947/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  classes_5f.js  classes_61.js  classes_63.js  classes_64.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6b.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_72.js  classes_73.js  classes_75.js  classes_76.js  (+88 more)
(+1937 files in other folders)
